--- a/CMS.AdminUI/Views/Home/Index.cshtml
+++ b/CMS.AdminUI/Views/Home/Index.cshtml
@@ -1,12 +1,12 @@
 ﻿@{
-    ViewBag.Title = "星联科技CMS后台";
+    ViewBag.Title = "梦都酒家CMS后台";
 
     Layout = null;
 }
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-    <title>星联科技管理后台</title>
+    <title>梦都酒家管理后台</title>
     <meta http-equiv="x-ua-compatible" content="ie=7" />
     <link href="@Url.Content("~/Content/login/screen.css")" rel="stylesheet" type="text/css" />
     <link href="@Url.Content("~/Content/login/base.css")" rel="stylesheet" type="text/css" />
@@ -22,7 +22,7 @@
 </head>
     <body>
         <div class="logina-logo" style="font-size: 30px">
-            星联科技网站管理后台
+            梦都酒家网站管理后台
         </div>
         <div class="logina-main main clearfix">
             <div class="tab-con">
@@ -63,7 +63,7 @@
            
         </div>
         <div id="footer">
-            <div class="copyright"> 星联科技  版权所有</div>
+            <div class="copyright"> 梦都酒家  版权所有</div>
         </div>
         @*<div class="all">
         <div class="main">
