--- a/CMS.AdminUI/Views/Index/Index.cshtml
+++ b/CMS.AdminUI/Views/Index/Index.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "星联科技管理后台";
+    ViewBag.Title = "梦都酒家管理后台";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 @section submenu{
@@ -16,7 +16,7 @@
                 <tr>
                     <td colspan="2">&nbsp;&nbsp;
                     <a href="#" target="_blank">
-                        <img src="/content/img/icons/home.png" style="vertical-align:middle;" alt="星联科技" title="星联科技" />&nbsp;星联科技
+                        <img src="/content/img/icons/home.png" style="vertical-align:middle;" alt="梦都酒家" title="梦都酒家" />&nbsp;梦都酒家
                     </a>&nbsp;&nbsp;
                     </td>
                 </tr>
