--- a/CMS.AdminUI/Content/css/ie-sucks.css
+++ b/CMS.AdminUI/Content/css/ie-sucks.css
@@ -1,21 +1,21 @@
-﻿#content{
-	width:740px;
+#content {
+	width: 740px;
 }
-#topmenu{
-	margin-top:26px;
+#topmenu {
+	margin-top: 26px;
 }
-#sidebar{
-	width:160px;
+#sidebar {
+	width: 160px;
 }
-#sidebar ul{
-	width:150px;
+#sidebar ul {
+	width: 150px;
 }
-#sidebar ul li ul{
-	width:140px;
+#sidebar ul li ul {
+	width: 140px;
 }
-#sidebar h3{
-	margin-bottom:5px;
+#sidebar h3 {
+	margin-bottom: 5px;
 }
 #rightnow .reallynow a {
-	padding:0 0 0 10px;
+	padding: 0px 0px 0px 10px;
 }
