--- a/CMS.AdminUI/Views/Shared/_Layout.cshtml
+++ b/CMS.AdminUI/Views/Shared/_Layout.cshtml
@@ -1,71 +1,93 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿<!DOCTYPE HTML PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-<meta http-equiv="X-UA-Compatible" content="IE=8" />
-<title>@ViewBag.Title</title>
-<link href="@Url.Content("~/Content/css/admin_theme.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
-<link href="@Url.Content("~/Content/easyui/default/easyui.css")" rel="stylesheet" type="text/css"/>
-<link href="@Url.Content("~/Content/easyui/icon.css")" rel="stylesheet" type="text/css"/>
-<!--[if IE]>
-<link rel="stylesheet" type="@Url.Content("~/Content/css/ie-sucks.css")" />
-<![endif]-->
-<script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
-<script src="@Url.Content("~/Scripts/jquery.easyui.min.js")" type="text/javascript"></script>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=8" />
+    <title>@ViewBag.Title</title>
+    <link href="@Url.Content("~/Content/css/theme.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/css/style.css")" rel="stylesheet" type="text/css" />
+    <script type="text/javascript">
+        function getCookie(name) {
+            var arr, reg = new RegExp("(^| )" + name + "=([^;]*)(;|$)");
+            if (arr = document.cookie.match(reg))
+                return unescape(arr[2]);
+            else
+                return null;
+        }
+        var StyleFile = "theme" + getCookie("theme") + ".css";
+        document.writeln('<link rel="stylesheet" type="text/css" href="/Content/css/' + StyleFile + '" />');
+    </script>
+    <link href="@Url.Content("~/Content/easyui/default/easyui.css")" rel="stylesheet" type="text/css" />
+    <link href="@Url.Content("~/Content/easyui/icon.css")" rel="stylesheet" type="text/css" />
+   
+    <!--[if IE]>
+    <link rel="stylesheet" type="@Url.Content("~/Content/css/ie-sucks.css")" />
+    <![endif]-->
+    <script src="@Url.Content("~/Scripts/jquery-1.5.1.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.validate.unobtrusive.min.js")" type="text/javascript"></script>
+    <script src="@Url.Content("~/Scripts/jquery.easyui.min.js")" type="text/javascript"></script>
+
 </head>
 <body>
-	<div id="container">
-    	<div id="header">
-    		<div style="width:100%">
-	        	<h2>星联科技后台管理系统</h2>
-        	</div>
-    		<div id="topmenu" style="margin-top:30px">
-            	<ul id="ulTopMenu">
-                	@ViewBag.TopMenu
-               </ul>
-          </div>
-      </div>
+    <div id="container">
+        <div id="header">
+            <div style="width:100%">
+                <h2>梦都酒家后台管理系统</h2>
+            </div>
+            <div id="topmenu" style="margin-top:30px">
+                <ul id="ulTopMenu">
+                    @ViewBag.TopMenu
+                </ul>
+            </div>
+        </div>
         <div id="wrapper">
             @RenderBody()
             <div id="sidebar">
-  		    @RenderSection("submenu")
-            <ul>
-            <li><h3><a href="#" class="user">系统功能</a></h3>
-            <ul>
-                <li><a href="@Url.Action("EditPwd","User")">密码修改</a></li>
-                <li><a href="@Url.Action("Logout","User")">退出系统</a></li>
-            </ul>
-        </li>
-            </ul>  
-            </div>
-      </div>
-        <div id="footer">
-             <div id="credits">
-   		    开发支持：highhappy QQ:641073538
+                @RenderSection("submenu")
+                <ul>
+                    <li>
+                        <h3><a href="#" class="user">系统功能</a></h3>
+                        <ul>
+                            <li><a href="@Url.Action("EditPwd","User")">密码修改</a></li>
+                            <li><a href="@Url.Action("Logout","User")">退出系统</a></li>
+                        </ul>
+                    </li>
+                </ul>
             </div>
         </div>
-   </div>
-   <script type="text/javascript">
-       jQuery(document).ready(function () {
-           var url = window.location.href;
-           url = url.replace("http://", "");
-           var controllername = url.split('/')[1];
-           if (controllername.indexOf('?') > 0) {
-               controllername = controllername.substring(0, controllername.indexOf('?'));
-           }
-           $("#ulTopMenu li").each(function () {
-               if ($(this).attr("id").toLowerCase() == "li" + controllername.toLowerCase()) {
-                   $(this).addClass("current");
-               }
-               else {
-                   $(this).removeClass("current");
-               }
-           })
-       });
-
+        <div id="footer">
+            <div id="credits" style="width: 400px;">
+                技术支持：highhappy&nbsp;&nbsp;&nbsp;&nbsp;QQ:641073538
+            </div>
+            <div id="styleswitcher">
+                <ul>
+                    <li><a id="defswitch" title="Default" href="javascript: document.cookie='theme='; window.location.reload();">d</a></li>
+                    <li><a id="blueswitch" title="Blue" href="javascript: document.cookie='theme=1'; window.location.reload();">b</a></li>
+                    <li><a id="greenswitch" title="Green" href="javascript: document.cookie='theme=2'; window.location.reload();">g</a></li>
+                    <li><a id="brownswitch" title="Brown" href="javascript: document.cookie='theme=3'; window.location.reload();">b</a></li>
+                    <li><a id="mixswitch" title="Mix" href="javascript: document.cookie='theme=4'; window.location.reload();">m</a></li>
+                </ul>
+            </div><br />
+        </div>
+    </div>
+    <script type="text/javascript">
+        jQuery(document).ready(function () {
+            var url = window.location.href;
+            url = url.replace("http://", "");
+            var controllername = url.split('/')[1];
+            if (controllername.indexOf('?') > 0) {
+                controllername = controllername.substring(0, controllername.indexOf('?'));
+            }
+            $("#ulTopMenu li").each(function () {
+                if ($(this).attr("id").toLowerCase() == "li" + controllername.toLowerCase()) {
+                    $(this).addClass("current");
+                }
+                else {
+                    $(this).removeClass("current");
+                }
+            })
+        });
     </script>
 </body>
 </html>
