--- a/CMS.AdminUI/Content/easyui/icon.css
+++ b/CMS.AdminUI/Content/easyui/icon.css
@@ -52,3 +52,9 @@
 .icon-tip{
 	background:url('icons/tip.png') no-repeat;
 }
+
+.icon-rename{
+	background:url('icons/textfield_rename.png') no-repeat;
+}
+
+
